--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "plugin-hello-world-webapp",
+  "version": "0.0.1",
+  "description": "The client side component of the hello world plugin",
+  "license": "See license of parent plugin",
   "private": true,
+  "author": "Alice R. Developer <aliced@acme.com>",
+  "contributors": [],
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
     "build": "webpack --mode=production",
     "build:watch": "webpack --mode=production --watch",
@@ -11,6 +20,13 @@
     "test:watch": "jest --watch",
     "test-ci": "jest --forceExit --detectOpenHandles --maxWorkers=2",
     "check-types": "tsc"
+  },
+  "dependencies": {
+    "@mattermost/webapp": "github:mattermost/mattermost-webapp",
+    "core-js": "^3.22.8",
+    "react": "^16.14.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/cli": "7.16.8",
@@ -70,6 +86,7 @@
     "sass": "1.52.3",
     "sass-loader": "13.0.0",
     "style-loader": "3.3.1",
+    "typescript": "4.6.4",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1"
   },
