--- a/webapp/.eslintrc.json
+++ b/webapp/.eslintrc.json
@@ -13,17 +13,13 @@
       "eslint:recommended",
       "plugin:react-hooks/recommended",
       "plugin:import/recommended",
-      "plugin:import/typescript",
-      "plugin:jest/recommended"
+      "plugin:import/typescript"
    ],
    "parser": "@typescript-eslint/parser",
    "plugins": [
-      "jest",
       "react",
       "import",
       "babel",
-      "cypress",
-      "no-only-tests",
       "@typescript-eslint"
    ],
    "parserOptions": {
