--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,52 +27,52 @@
     "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.16.8",
-    "@babel/core": "7.16.12",
-    "@babel/plugin-proposal-class-properties": "7.16.7",
-    "@babel/plugin-proposal-object-rest-spread": "7.16.7",
-    "@babel/plugin-proposal-optional-chaining": "7.16.7",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-react": "7.16.7",
-    "@babel/preset-typescript": "7.16.7",
-    "@babel/runtime": "7.16.7",
-    "@emotion/babel-preset-css-prop": "11.2.0",
-    "@emotion/core": "10.3.1",
-    "@mattermost/types": "6.7.0-0",
-    "@types/babel__core": "7.1.18",
-    "@types/babel__template": "7.4.1",
-    "@types/node": "17.0.12",
-    "@types/react": "16.14.26",
-    "@types/react-dom": "17.0.11",
-    "@types/react-redux": "7.1.22",
-    "@types/react-router-dom": "5.1.5",
-    "@types/react-transition-group": "4.4.0",
-    "@typescript-eslint/eslint-plugin": "5.10.1",
-    "@typescript-eslint/parser": "5.10.1",
-    "@typescript-eslint/typescript-estree": "5.52.0",
-    "babel-eslint": "10.1.0",
-    "babel-loader": "8.2.2",
-    "babel-plugin-formatjs": "10.3.7",
-    "babel-plugin-typescript-to-proptypes": "2.0.0",
-    "css-loader": "6.5.1",
-    "eslint": "8.8.0",
-    "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "2.7.1",
-    "eslint-import-resolver-webpack": "0.13.2",
-    "eslint-plugin-babel": "5.3.1",
-    "eslint-plugin-header": "3.1.1",
-    "eslint-plugin-import": "2.25.4",
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@babel/runtime": "^7.16.7",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@emotion/core": "^10.3.1",
+    "@mattermost/types": "^6.7.0-0",
+    "@types/babel__core": "^7.1.18",
+    "@types/babel__template": "^7.4.1",
+    "@types/node": "^17.0.12",
+    "@types/react": "^16.14.26",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-transition-group": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "@typescript-eslint/typescript-estree": "^5.52.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-formatjs": "^10.3.7",
+    "babel-plugin-typescript-to-proptypes": "^2.0.0",
+    "css-loader": "^6.5.1",
+    "eslint": "^8.8.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-mattermost": "github:mattermost/eslint-plugin-mattermost",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "4.3.0",
-    "file-loader": "6.2.0",
-    "isomorphic-fetch": "3.0.0",
-    "sass": "1.52.3",
-    "sass-loader": "13.0.0",
-    "style-loader": "3.3.1",
-    "typescript": "4.6.4",
-    "webpack": "5.75.0",
-    "webpack-cli": "5.0.1"
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "file-loader": "^6.2.0",
+    "isomorphic-fetch": "^3.0.0",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.6.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
