--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,10 +20,10 @@
     "check-types": "tsc"
   },
   "dependencies": {
-    "@mattermost/webapp": "github:mattermost/mattermost-webapp",
+    "@mattermost/webapp": "github:mattermost/mattermost-webapp#v6.3.10",
     "core-js": "^3.22.8",
-    "react": "^16.14.0",
-    "react-redux": "^8.0.2",
+    "react": "^17.0.0",
+    "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
   "devDependencies": {
