--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@babel/cli": "^7.21.0",
     "@babel/core": "^7.21.3",
+    "@babel/eslint-parser": "^7.21.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
@@ -50,8 +51,6 @@
     "@types/react-transition-group": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "@typescript-eslint/typescript-estree": "^5.52.0",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.3.0",
     "babel-plugin-formatjs": "^10.4.0",
     "babel-plugin-typescript-to-proptypes": "^2.0.0",
