fix webapp package.json test script

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,7 +16,7 @@
     "debug:watch": "webpack --mode=development --watch",
     "lint": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --cache",
     "fix": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --fix --cache",
-    "test": "no tests. install test packages when tests are written",
+    "test": "echo no webapp tests. install test packages when tests are written",
     "check-types": "tsc"
   },
   "dependencies": {
