build: update babel, typescript, webpack and eslint configs (per just committed pkg changes)
added ts-loader to feed into babel-loader. This means it should use esnext modules not commonjs, and let the babel-loader define the final module style.

I changed the babel preset-env from modules false to 'auto' because that seems to be what is recommended when babel is used w/ a bundler (like webpack). I'm not sure why mattermost would has set it to false.

add webpack resolver in addition to typescript for eslint. Without it we get errors such as:
```
/home/mmuser/riff/mm-plugin-riff-lti/webapp/src/components/admin_settings/confirmation_modal.tsx
  2:29  error  Unable to resolve path to module 'react-bootstrap'  import/no-unresolved
```
from this import statement:
```
import {Modal, Button} from 'react-bootstrap';
```

This is because `react-bootstrap` isn't a direct dependency:
```
$ npm list react-bootstrap
plugin-riff-lti-webapp@1.0.4-dev.1 /home/mmuser/riff/mm-plugin-riff-lti/webapp
`-- @mattermost/webapp@5.36.0-0 (git+ssh://git@github.com/mattermost/mattermost-webapp.git#154fcb97d348c86367661fb3f17d78681f0407e5)
  `-- react-bootstrap@0.32.4 (git+ssh://git@github.com/mattermost/react-bootstrap.git#c6957962364e0818a51bbfd13e89919903b422d6)
```
So `react-bootstrap` is in a nested `node_modules` `/webapp/node_modules/@mattermost/webapp/node_modules/react-bootstrap`

Which the webpack resolver locates.

--- a/webapp/.eslintrc.json
+++ b/webapp/.eslintrc.json
@@ -3,7 +3,8 @@
       "import/resolver": {
          "typescript": {
             "project": "./tsconfig.json"
-         }
+         },
+         "webpack": "webpack.config.js"
        },
       "react": {
          "version": "16.14.0"
