--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
-      "mattermost-redux/*": ["../node_modules/@mattermost/webapp/packages/mattermost-redux/src/*"],
+      "mattermost-redux/*": ["node_modules/@mattermost/webapp/packages/mattermost-redux/src/*"]
     },
     "lib": [
       "dom",
@@ -18,11 +18,10 @@
     "strict": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "experimentalDecorators": true,
     "jsx": "react"
   },
