build: check-types script in package.json now needs --noEmit option because it was removed from tsconfig

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --cache",
     "fix": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --fix --cache",
     "test": "echo no webapp tests. install test packages when tests are written",
-    "check-types": "tsc"
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@mattermost/webapp": "github:mattermost/mattermost-webapp#v6.3.10",
