build: add override of typescript version required by @mattermost/types@6.7.0-0
@mattermost/types@6.7.0-0 "specifies" typescript v4 as a peer dependency and we have upgraded to v5 which works fine

See the package.json overrides doc at: https://docs.npmjs.com/cli/v8/configuring-npm/package-json#overrides

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,6 +19,11 @@
     "test": "echo no webapp tests. install test packages when tests are written",
     "check-types": "tsc --noEmit"
   },
+  "overrides": {
+    "@mattermost/types": {
+      "typescript": "$typescript"
+    }
+  },
   "dependencies": {
     "@mattermost/webapp": "github:mattermost/mattermost-webapp#v6.3.10",
     "core-js": "^3.29.1",
