build: add commit-and-tag-version dev dependency

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
     "build:watch": "webpack --mode=production --watch",
     "debug": "webpack --mode=none",
     "debug:watch": "webpack --mode=development --watch",
+    "release": "commit-and-tag-version",
     "lint": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --cache",
     "fix": "eslint --ignore-pattern node_modules --ignore-pattern dist --ext .js --ext .jsx --ext tsx --ext ts . --quiet --fix --cache",
     "test": "echo no webapp tests. install test packages when tests are written",
@@ -51,6 +52,7 @@
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "babel-loader": "^9.1.2",
+    "commit-and-tag-version": "^11.2.1",
     "css-loader": "^6.7.3",
     "eslint": "^8.38.0",
     "eslint-import-resolver-alias": "^1.1.2",
